youtube framework is complete

--- a/youtube-remake/index.html
+++ b/youtube-remake/index.html
@@ -20,8 +20,11 @@
         <span>&#9776;</span>
         <img src="img/Youtube-red-logo.png">
         <input type="text" value="Search"></input>
-        <button>Upload</button>
-        <a href="#"><i class="fa fa-bell" aria-hidden="true"></i></a>
+        <section>
+          <button>Upload</button>
+          <a href="#"><i class="fa fa-bell" aria-hidden="true"></i></a>
+          <div></div>
+        </section>
       </header>
       <aside>
         <div>
