--- a/youtube-remake/index.html
+++ b/youtube-remake/index.html
@@ -139,7 +139,7 @@
         <button>Load more</button>
       </main>
       <footer>
-        <ul>
+        <ul class="buttons">
           <li><img src="img/youtubelogo.png"></li>
           <li><button>Language: <span>English</span></button></li>
           <li><button>Country: <span>Worldwide</span></button></li>
@@ -147,7 +147,7 @@
           <li><button>History</button></li>
           <li><button>Help</button></li>
         </ul>
-        <ul>
+        <ul class="small">
           <li><a href="#">About</a></li>
           <li><a href="#">Press</a></li>
           <li><a href="#">Copyright</a></li>
@@ -156,7 +156,7 @@
           <li><a href="#">Developers</a></li>
           <li><a href="#">+YouTube</a></li>
         </ul>
-        <ul>
+        <ul class="tiny">
           <li><a href="#">Terms</a></li>
           <li><a href="#">Privacy</a></li>
           <li><a href="#">Policy &amp; Safety</a></li>
